--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "build:ui": "rm -rf dist && cd ../phonebook && npm run build && cp -r dist ../../part3/phonebook",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
