--- a/part4/blog_list/package.json
+++ b/part4/blog_list/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development node --watch index.js",
-    "test": "cross-env NODE_ENV=test node --test"
+    "test": "cross-env NODE_ENV=test node --test",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,10 @@
     "mongoose": "^8.16.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.0",
+    "@stylistic/eslint-plugin-js": "^4.4.1",
+    "eslint": "^9.30.0",
+    "globals": "^16.2.0",
     "supertest": "^7.1.1"
   }
 }
